--- a/index.html
+++ b/index.html
@@ -108,8 +108,61 @@
 					<li><i class="far fa-gem"></i> Các thông tin trước khi đang tải đều được kiểm chứng rõ ràng</li>
 				</ul>
 			</div>
-			<div class="intro-content-employee">1</div>
-			<div class="intro-content-founder">1</div>
+			<div class="intro-content-employee">
+				<ul>
+					<li><i class="fas fa-battery-full"></i> Nhân viên được đào tạo bài bản</li>
+					<li><i class="fas fa-battery-full"></i> Website được thiết kế, vận hành đa nền tảng</li>
+					<li><i class="fas fa-battery-full"></i> Cam kết thông tin nội dung website là đúng</li>
+				</ul>
+			</div>
+			<div class="intro-content-founder">
+				<div class="founder-table">
+					<!--Founder 1-->
+					<div class="founder-content">
+						<div class="founder-img">
+							<img src="Images/doctor.png">
+						</div>
+						<div class="founder-info">
+							<h3>Lê Văn Long</h3>
+							<p>Director<br>Làm việc pro vcl, trả lương đúng hạn</p>
+						</div>
+						<button><a target="_blank" href="https://www.facebook.com/profile.php?id=100041602174887">Tìm hiểu thêm</a></button>
+					</div>
+					<!--Founder 2-->
+					<div class="founder-content">
+						<div class="founder-img">
+							<img src="Images/doctor.png">
+						</div>
+						<div class="founder-info">
+							<h3>Nguyễn Ngọc Ánh</h3>
+							<p>CEO<br>Thần pr, pr chưa trượt lần nào</p>
+						</div>
+						<button><a target="_blank" href="https://www.facebook.com/profileofme">Tìm hiểu thêm</a></button>
+					</div>
+					<!--Founder 3-->
+					<div class="founder-content">
+						<div class="founder-img">
+							<img src="Images/doctor.png">
+						</div>
+						<div class="founder-info">
+							<h3>Lê Thái Bình</h3>
+							<p>Designer<br>Một thằng nghiện advenger vô tích sự</p>
+						</div>
+						<button><a target="_blank" href="https://www.facebook.com/winter.soldiers.10690">Tìm hiểu thêm</a></button>
+					</div>
+					<!--Founder 4-->
+					<div class="founder-content">
+						<div class="founder-img">
+							<img src="Images/doctor.png">
+						</div>
+						<div class="founder-info">
+							<h3>Hoàng Anh Tú</h3>
+							<p>Programmer<br>Chơi game toàn top 8, gà vcl</p>
+						</div>
+						<button><a target="_blank" href="https://www.facebook.com/profile.php?id=100004985657894">Tìm hiểu thêm</a></button>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<script src="JS/myScript.js"></script>
