--- a/index.html
+++ b/index.html
@@ -171,7 +171,27 @@
 		<div class="statistic-container">
 			<div class="statistic-text">Thống kê các ca mắc covid ngày: <div id="timeShow"></div>
 			<div class="text-statistic">
-				<p>Hôm nay việt Nam ghi nhận thêm xxx ca mắc mới, nâng tổng ca mắc cả nước lên nnn ca. Chi tiết các ca mắc</p>
+				<p>Hôm nay việt Nam ghi nhận thêm zxc ca mắc mới, nâng tổng ca mắc cả nước lên nnn ca. Chi tiết các ca mắc:
+				</p>
+				<div class="detail-statistic">
+				<ul>
+						<li>Bắc Giang: 121</li>
+						<li>Đà Nẵng: 12</li>
+						<li>Đắk Lắk: 1</li>
+					</ul>
+				</div>
+				<p>Thế giới, tình hình dịch bệnh đang có chiều hướng tốt lên ở các nước như: Ấn Độ, Đức.</p>
+				<div class="detail-statistic">
+				<ul>
+						<li>Ấn độ: 121</li>
+						<li>Trung quốc: 12</li>
+						<li>Đức: 1</li>
+					</ul>
+				</div>
+				<div class="quote3">
+					<p>- Nhìn chung dịch bệnh đang có tiến triển tốt.<br>- Căn cứ theo tình hình này, chúng ta hoàn toàn có thể chiến thắng đại dịch lần này.<br>
+					- Thân ái, quyết thắng.</p>
+				</div>
 			</div>
 		</div>
 			<div class="statistic-chart">
@@ -192,10 +212,20 @@
 			</div>
 		</div>
 	</div>
+
+	<!--Aditional infomation-->
+	<div class="add-info">
+		
+	</div>
 	<footer class="footer">
 		<div class="footer-table">
 			<div class="social-icon">
-					<p>Put some interesting icon here</p>
+					<i class="fas fa-syringe"></i>
+					<i class="fas fa-syringe"></i>
+					<i class="fas fa-syringe"></i>
+					<i class="fas fa-syringe"></i>
+					<i class="fas fa-syringe"></i>
+					<i class="fas fa-syringe"></i>
 			</div>
 			<div class="related-link">
 					<p style="font-size: 1.5rem; margin-bottom: 20px;">Đối tác</p><br>
@@ -206,14 +236,34 @@
 						<p>CTY TNHH TPS BAUM</p>
 					</div>
 					<div>
-						<a href="">www.tps.medi</a><br>
-						<a href="">www.advenger.adv</a><br>
-						<a href="">www.fresh.ve</a><br>
-						<a href="">www.baum.de</a>
+						<p>CTY TNHH TRUTHINFO</p>
+						<p>CTY TNHH ADVENGER</p>
+						<p>CTY TNHH FRESH</p>
+						<p>CTY TNHH TPS BAUM</p>
 					</div>
 			</div>
 			<div class="something-else">
-					<p>else</p>
+					<p>Thông tin của website được tổng hợp từ các trang web hàng đầu về lĩnh vực y tế</p>
+					<div class="info-contain">
+					<div class="info-link">
+						<a href="#">www.tps.medi</a><br>
+						<a href="#">www.advenger.adv</a><br>
+						<a href="#">www.fresh.ve</a><br>
+						<a href="#">www.baum.de</a>
+					</div>
+					<div class="info-link">
+						<a href="#">www.tps.medi</a><br>
+						<a href="#">www.advenger.adv</a><br>
+						<a href="#">www.fresh.ve</a><br>
+						<a href="#">www.baum.de</a>
+					</div>
+					<div class="info-link">
+						<a href="#">www.tps.medi</a><br>
+						<a href="#">www.advenger.adv</a><br>
+						<a href="#">www.fresh.ve</a><br>
+						<a href="#">www.baum.de</a>
+					</div>
+					</div>
 			</div>
 		</div>
 		<div class="copyright">
