--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<!--Founder 1-->
 					<div class="founder-content">
 						<div class="founder-img">
-							<img src="Images/doctor.png">
+							<img src="Images/dire.svg">
 						</div>
 						<div class="founder-info">
 							<h3>Lê Văn Long</h3>
@@ -131,18 +131,19 @@
 					<!--Founder 2-->
 					<div class="founder-content">
 						<div class="founder-img">
-							<img src="Images/doctor.png">
+							<img src="Images/co.svg">
 						</div>
 						<div class="founder-info">
-							<h3>Nguyễn N. Ánh</h3>
-							<p>CEO<br>Thần pr, pr chưa trượt lần nào</p>
+							<h3>Hoàng Anh Tú</h3>
+							<p>Programmer<br>Chơi game toàn top 8, gà vcl</p>
 						</div>
-						<button><a target="_blank" href="https://www.facebook.com/profileofme">Tìm hiểu thêm</a></button>
+						<button><a target="_blank" href="https://www.facebook.com/profile.php?id=100004985657894">Tìm hiểu thêm</a></button>
 					</div>
+					
 					<!--Founder 3-->
 					<div class="founder-content">
 						<div class="founder-img">
-							<img src="Images/doctor.png">
+							<img src="Images/desi.svg">
 						</div>
 						<div class="founder-info">
 							<h3>Lê Thái Bình</h3>
@@ -153,13 +154,13 @@
 					<!--Founder 4-->
 					<div class="founder-content">
 						<div class="founder-img">
-							<img src="Images/doctor.png">
+							<img src="Images/seo.svg">
 						</div>
 						<div class="founder-info">
-							<h3>Hoàng Anh Tú</h3>
-							<p>Programmer<br>Chơi game toàn top 8, gà vcl</p>
+							<h3>Nguyễn Ngọc Ánh</h3>
+							<p>CEO<br>Thần pr, pr chưa trượt lần nào</p>
 						</div>
-						<button><a target="_blank" href="https://www.facebook.com/profile.php?id=100004985657894">Tìm hiểu thêm</a></button>
+						<button><a target="_blank" href="https://www.facebook.com/profileofme">Tìm hiểu thêm</a></button>
 					</div>
 				</div>
 			</div>
@@ -171,26 +172,27 @@
 		<div class="statistic-container">
 			<div class="statistic-text">Thống kê các ca mắc covid ngày: <div id="timeShow"></div>
 			<div class="text-statistic">
-				<p>Hôm nay việt Nam ghi nhận thêm zxc ca mắc mới, nâng tổng ca mắc cả nước lên nnn ca. Chi tiết các ca mắc:
+				<p>Hôm nay việt Nam ghi nhận thêm 57 ca mắc mới, trong đó, 1 ca cách ly ngay sau khi nhập cảnh tại Tây Ninh và 56 ca ghi nhận trong nước tại:
 				</p>
 				<div class="detail-statistic">
 				<ul>
-						<li>Bắc Giang: 121</li>
-						<li>Đà Nẵng: 12</li>
-						<li>Đắk Lắk: 1</li>
+						<li>Bắc Giang: 32</li>
+						<li>Bắc Ninh: 20</li>
+						<li>Lạng Sơn: 3</li>
+						<li>Hải Dương: 1</li>
 					</ul>
 				</div>
-				<p>Thế giới, tình hình dịch bệnh đang có chiều hướng tốt lên ở các nước như: Ấn Độ, Đức.</p>
+				<p>Theo trang worldometer.info, trong vòng 24 giờ qua, thế giới ghi nhận trên 465.000 ca mắc covid 19 và trên 10.100 ca tử vong. Tổng số ca bện từ đâu dịch tới nay đã vượt trên 172 triêu ca, trong đó, trên 3.7 triệu ca tử vong. Các quốc gia có ca nhiễm cao: </p>
 				<div class="detail-statistic">
 				<ul>
-						<li>Ấn độ: 121</li>
-						<li>Trung quốc: 12</li>
-						<li>Đức: 1</li>
+						<li>Ấn độ: 134.105</li>
+						<li>Brazil: 94.509</li>
+						<li>Argentina: 35.017</li>
 					</ul>
 				</div>
 				<div class="quote3">
-					<p>- Nhìn chung dịch bệnh đang có tiến triển tốt.<br>- Căn cứ theo tình hình này, chúng ta hoàn toàn có thể chiến thắng đại dịch lần này.<br>
-					- Thân ái, quyết thắng.</p>
+					<p>
+					</p>
 				</div>
 			</div>
 		</div>
@@ -215,17 +217,50 @@
 
 	<!--Aditional infomation-->
 	<div class="add-info">
-		
+		<div class="add-ske">
+			<div class="add-left-side">
+				<div class="add-left-side-top">
+					<span><i class="fas fa-arrow-circle-left"></i></span>
+					<div class="add-left-link">
+						<a href="#">Việt Nam nghiên cứu thành công vacxin</a>
+						<a href="#">Tình hình dịch được cải thiện ở Ấn Độ</a>
+						<a href="#">Các quốc gia có số ca tử vong cao</a>
+						<a href="#" style="background-color: #fff">...</a>
+					</div>
+					<span><i class="fas fa-arrow-circle-right"></i></span>
+				</div>
+				<div class="add-left-side-bot">
+					<div class="add-image">
+					<img src="Images/vaxin.jpg">
+					<p><b>Tin vui</b>: Hoàn tất thử nghiệm vaccine COVID-19 ‘made in VietNam’ giai đoạn 2</p>
+					</div>
+					<p>Việc thử nghiệm lâm sàng giai đoạn 2 của vaccine Nano Covax (Là vaccine do Công ty Nanogen nghiên cứu, phát triển) được tiến hành trên 560 người chia làm 4 nhóm, tiêm 3 mức liều 25mcg, 50mcg và 75mcg vaccine Nano Covax cùng 1 nhóm tiêm giả dược. Tuy nhiên đến mũi 2 có 554 người thử nghiệm do 6 người rút khỏi danh sách vì lý do khách quan. 
+					<br>
+					Kết quả cho thấy cả 3 mức liều đều đảm bảo độ an toàn. 100% người được tiêm 3 mức liều kể trên đều sinh miễn dịch ở các mức độ khác nhau.
+					<br>
+					Về chỉ số kháng thể trung hòa virus (khả năng tiêu diệt virus xâm nhập sau tiêm vaccine), mức liều 25mcg đạt cao nhất với trên 90% ở 14 ngày sau tiêm mũi 2 (tức 42 ngày sau tiêm mũi đầu tiên). 2 mức liều còn lại đạt xấp xỉ liều 25mcg nhưng khác biệt không có ý nghĩa thống kê.</p>
+				</div>
+			</div>
+			<div class="add-right-side">
+				<h3>Tin trong ngày</h3>
+				<ul>
+					<li><i class="fas fa-angle-right"></i><a href="#">Hà Nội ban hành Công điện số 12</a></li>
+					<li><i class="fas fa-angle-right"></i><a href="#">Lạng Sơn khẩn trương lấy mẫu xét nghiệm diện rộng</a></li>
+					<li><i class="fas fa-angle-right"></i><a href="#">12 thầy BV Hữu Nghị đến Bắc Giang điều trị</a></li>
+					<li><i class="fas fa-angle-right"></i><a href="#">Tăng cường tiếp cận vắc xin COVID-19</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 	<footer class="footer">
 		<div class="footer-table">
 			<div class="social-icon">
-					<i class="fas fa-syringe"></i>
-					<i class="fas fa-syringe"></i>
-					<i class="fas fa-syringe"></i>
-					<i class="fas fa-syringe"></i>
-					<i class="fas fa-syringe"></i>
-					<i class="fas fa-syringe"></i>
+					<i class="fas fa-clinic-medical"></i>
+					<i class="fab fa-facebook-square"></i>
+					<i class="fab fa-twitter-square"></i>
+					<i class="fab fa-whatsapp-square"></i>
+					<i class="fab fa-instagram"></i>
+					<i class="fas fa-globe"></i>
 			</div>
 			<div class="related-link">
 					<p style="font-size: 1.5rem; margin-bottom: 20px;">Đối tác</p><br>
