--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				<div class="add-left-side-bot">
 					<div class="add-image">
 					<img src="Images/vaxin.jpg">
-					<p><b>Tin vui</b>: Hoàn tất thử nghiệm vaccine COVID-19 ‘made in VietNam’ giai đoạn 2</p>
+					<h3>Tin vui: Hoàn tất thử nghiệm vaccine COVID-19 ‘made in VietNam’ giai đoạn 2</h3>
 					</div>
 					<p>Việc thử nghiệm lâm sàng giai đoạn 2 của vaccine Nano Covax (Là vaccine do Công ty Nanogen nghiên cứu, phát triển) được tiến hành trên 560 người chia làm 4 nhóm, tiêm 3 mức liều 25mcg, 50mcg và 75mcg vaccine Nano Covax cùng 1 nhóm tiêm giả dược. Tuy nhiên đến mũi 2 có 554 người thử nghiệm do 6 người rút khỏi danh sách vì lý do khách quan. 
 					<br>
@@ -249,6 +249,7 @@
 					<li><i class="fas fa-angle-right"></i><a href="#">12 thầy BV Hữu Nghị đến Bắc Giang điều trị</a></li>
 					<li><i class="fas fa-angle-right"></i><a href="#">Tăng cường tiếp cận vắc xin COVID-19</a></li>
 				</ul>
+				<a class="detail-button" href="#"><i class="fas fa-info-circle"></i> Chi tiết hơn</a>
 			</div>
 		</div>
 	</div>
@@ -282,19 +283,19 @@
 					<div class="info-contain">
 					<div class="info-link">
 						<a href="#">www.tps.medi</a><br>
-						<a href="#">www.advenger.adv</a><br>
+						<a href="#">www.adv.adv</a><br>
 						<a href="#">www.fresh.ve</a><br>
 						<a href="#">www.baum.de</a>
 					</div>
 					<div class="info-link">
 						<a href="#">www.tps.medi</a><br>
-						<a href="#">www.advenger.adv</a><br>
+						<a href="#">www.adv.adv</a><br>
 						<a href="#">www.fresh.ve</a><br>
 						<a href="#">www.baum.de</a>
 					</div>
 					<div class="info-link">
 						<a href="#">www.tps.medi</a><br>
-						<a href="#">www.advenger.adv</a><br>
+						<a href="#">www.adv.adv</a><br>
 						<a href="#">www.fresh.ve</a><br>
 						<a href="#">www.baum.de</a>
 					</div>
