--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#"><i class="fas fa-user-nurse"></i>
+					<a class="nav-link" href="indexx.html"><i class="fas fa-user-nurse"></i>
 						Phòng chống
 					</a>
 				</li>
@@ -249,7 +249,7 @@
 					<li><i class="fas fa-angle-right"></i><a href="#">12 thầy BV Hữu Nghị đến Bắc Giang điều trị</a></li>
 					<li><i class="fas fa-angle-right"></i><a href="#">Tăng cường tiếp cận vắc xin COVID-19</a></li>
 				</ul>
-				<a class="detail-button" href="#"><i class="fas fa-info-circle"></i> Chi tiết hơn</a>
+				<a class="detail-button" href="info.html"><i class="fas fa-info-circle"></i> Chi tiết hơn</a>
 			</div>
 		</div>
 	</div>
