--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#"><i class="far fa-newspaper"></i>
+					<a class="nav-link" href="info.html"><i class="far fa-newspaper"></i>
 						Tin tức
 					</a>
 				</li>
