--- a/info.html
+++ b/info.html
@@ -19,7 +19,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#"><i class="far fa-newspaper"></i>
+					<a style="border-bottom: 2px solid #03cafc;" class="nav-link" href="#"><i class="far fa-newspaper"></i>
 						Tin tức
 					</a>
 				</li>
@@ -43,6 +43,160 @@
 		</div>
 	</header>
 	<!--Hot news-->
-	<div class="con"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-8">
+				<span><a href="#">THỜI SỰ</a>|DÂN SINH</span>
+				<div class="bucket">
+					<a href="#" style="text-decoration: none;"><i class="fas fa-angle-double-right"></i>Tiếp theo</a>
+			  	<p>(Chinhphu.vn) - Chiều 25/4, thông tin từ nhóm nghiên cứu vaccine phòng COVID-19 Nano Covax- vaccine “made in” Việt Nam đầu tiên thử nghiệm lâm sàng giai đoạn 2 cho thấy trong 3 mức liều được đưa vào sử dụng, liều 25mcg có hiệu quả bảo vệ cao nhất, 100% người tiêm sinh miễn dịch.<br></p>
+			  	<img src="Images/oke.jpg">
+			  	<p>Căn cứ vào kết quả thử nghiệm giai đoạn 1 và giai đoạn 2 đến thời điểm hiện tại, tất cả các chuyên gia đều rất lạc quan cho rằng nếu thuận lợi, thậm chí cuối quý 3/2021 sẽ hoàn thành thử nghiệm giai đoạn 3 đối với vắc xin phòng COVID-19 Nano Covax, rút ngắn tiếp 3 tháng so với kế hoạch dự kiến trước đó
+			  		<br><br>
+				Trong số 554 tình nguyện viên, Học viện Quân Y tiến hành tiêm thử mũi 2 giai đoạn 2 vaccine phòng COVID-19 Nano Covax cho 278 người, Viện Pasteur Thành phố Hồ Chí Minh tiêm cho 276 người tại huyện Bến Lức, tỉnh Long An; hoàn tất 100% mũi tiêm thử nghiệm thứ 2 của giai đoạn này.
+					<br><br>
+				Ở giai đoạn thử nghiệm lâm sàng 2 của vaccine này đã mở rộng ra nhóm người cao tuổi và có bệnh lý nền. Hiện, 108 người cao tuổi đã được tiêm thử nghiệm lâm sàng giai đoạn 2, trong đó, cao nhất là 76 tuổi. 
+					<br><br>
+				Sau khi tiêm mũi 2 giai đoạn 2 vaccine ngừa COVID-19 Nano Covax, các tình nguyện viên có triệu chứng như sốt nhẹ, đau chỗ tiêm tự hết, đau cơ, đau khớp, mệt mỏi… nhưng hết nhanh, không cần can thiệp y tế./.
+			  	</div>
+			  	<h2>Bản tin covid-19 hôm nay 05.06. Dịch bệnh tại TP.HCM vẫn nóng bỏng, tín hiệu vui từ vắc xin</h2>
+			  	<hr style="border-top: 1px dashed #000;">
+			  	<h3>Bản tin hôm nay có các thông tin đáng chú ý như sau:</h3>
+			  	<div class="bucket">
+			  	<hr style="border-top: 1px dashed #000;">
+			  	<p>Tiêm vắc xin đang phát huy hiệu quả</p>
+			  	<p>Chiến dịch tiêm chủng vắc xin ngừa COVID-19 đang phát huy hiệu quả. Số ca nhiễm mới và tử vong có chiều hướng giảm tại nhiều khu vực.<br><br>
+
+				Mỹ - từng thời gian dài là tâm dịch của thế giới, đã ghi nhận những con số tích cực hằng ngày. Từ lúc số ca nhiễm mới hằng ngày lên tới hàng trăm ngàn ca, nay con số mắc mới hằng ngày giảm xuống còn 15.000-16.000 ca/ngày. <br>
+
+				Tính đến nay, Mỹ đã ghi nhận tổng cộng 34.173.575 ca mắc, trong đó có 611.574 ca tử vong. Xếp đầu danh sách các nước có số ca mắc và nhiễm cao nhất thế giới vẫn là Mỹ, Ấn Độ và Brazil.</p>
+			  	<img src="Images/w.jpg">
+			  	<p>Ngày 3-6, Ngân hàng Thế giới (WB) và Quỹ Tiền tệ quốc tế (IMF) đã ra lời kêu gọi các quốc gia thuộc Nhóm các nước công nghiệp phát triển (G7) tính toán nguồn cung vắc xin ngừa COVID-19 dư thừa trong những tháng tới để chia sẻ số vắc xin này với các nước đang phát triển sớm nhất có thể.<br><br>
+
+				Trong một tuyên bố chung gửi tới G7, Chủ tịch WB David Malpass và Tổng giám đốc IMF Kristalina Georgieva nhấn mạnh rằng đại dịch COVID-19 sẽ không kết thúc cho đến khi tất cả mọi người trên thế giới được tiếp cận vắc xin, trong đó có người dân ở những quốc gia đang phát triển.</p>
+			  	</div>
+			  	<hr style="border-top: 1px dashed #000;">
+			  	
+			</div>
+
+			<div class="col-4">
+			  	<div class="list-new">
+			  		<h3 style="border-left: 3px solid #cc4a1f;">Tin tức mới</h3>
+			  		<div class="devide"></div>
+			  		<div class="box-new">
+			  			<div class="box-img">
+			  				<img src="Images/3.jpeg">
+			  			</div>
+			  			<div class="box-content">
+			  				<a href="#"><i class="fas fa-chevron-right"></i>Ngày 3.6 Việt Nam ghi nhận thêm 250 ca mắc covid-19 mới</a>
+			  			</div>
+			  		</div>
+
+			  		<div class="devide"></div>
+			  		<div class="box-new">
+			  			<div class="box-img">
+			  				<img src="Images/3.jpeg">
+			  			</div>
+			  			<div class="box-content">
+			  				<a href="#"><i class="fas fa-chevron-right"></i>TP.Thủ Đức: Một ca tiếp xúc vòng 3 - F3 nghi nhiễm Covid-19</a>
+			  			</div>
+			  		</div>
+
+			  		<div class="devide"></div>
+			  		<div class="box-new">
+			  			<div class="box-img">
+			  				<img src="Images/7.jpeg">
+			  			</div>
+			  			<div class="box-content">
+			  				<a href="#"><i class="fas fa-chevron-right"></i>Bà Nguyễn Phương Hằng bị kiện đòi bồi thường 1.000 tỉ đồng: Miễn án phí?</a>
+			  			</div>
+			  		</div>
+
+			  		<div class="devide"></div>
+			  		<div class="box-new">
+			  			<div class="box-img">
+			  				<img src="Images/7.jpeg">
+			  			</div>
+			  			<div class="box-content">
+			  				<a href="#"><i class="fas fa-chevron-right"></i>Người từ đồng nai về phải cách ly tại nhà 21 ngày</a>
+			  			</div>
+			  		</div>
+
+			  		<div class="devide"></div>
+			  		<div class="box-new">
+			  			<div class="box-img">
+			  				<img src="Images/5.jpeg">
+			  			</div>
+			  			<div class="box-content">
+			  				<a href="#"><i class="fas fa-chevron-right"></i>Đồng Tháp: Bắt giữ 2 nghi phạm hiếp dâm, giết người vứt xuống sông</a>
+			  			</div>
+			  		</div>
+
+			  	</div>
+
+			  	<!---->
+
+			  	<div class="list-new">
+			  		<h3 style="border-left: 3px solid #cc4a1f;">Tin quốc tế</h3>
+			  		<div class="devide"></div>
+			  		<div class="box-new">
+			  			<div class="box-img">
+			  				<img src="Images/33.jpg">
+			  			</div>
+			  			<div class="box-content">
+			  				<a href="#"><i class="fas fa-chevron-right"></i>Số người chết vì Covid-19 ở Ấn Độ vẫn cao, Trung Quốc có thêm nhiều ca nhiễm</a>
+			  			</div>
+			  		</div>
+
+			  		<div class="devide"></div>
+			  		<div class="box-new">
+			  			<div class="box-img">
+			  				<img src="Images/22.jpg">
+			  			</div>
+			  			<div class="box-content">
+			  				<a href="#"><i class="fas fa-chevron-right"></i>Sốc vì phải tự lục tìm người thân giữa bãi thi thể nạn nhân Covid-19 ở bệnh viện Ấn Độ</a>
+			  			</div>
+			  		</div>
+
+			  		<div class="devide"></div>
+			  		<div class="box-new">
+			  			<div class="box-img">
+			  				<img src="Images/33.jpg">
+			  			</div>
+			  			<div class="box-content">
+			  				<a href="#"><i class="fas fa-chevron-right"></i>Tiết lộ mới liên quan đến báo cáo đầu tiên của tình báo Mỹ về UFO</a>
+			  			</div>
+			  		</div>
+
+			  		<div class="devide"></div>
+			  		<div class="box-new">
+			  			<div class="box-img">
+			  				<img src="Images/22.jpg">
+			  			</div>
+			  			<div class="box-content">
+			  				<a href="#"><i class="fas fa-chevron-right"></i>Bộ ngoại giao Mỹ từng được cảnh báo không nên điều tra nguồn gốc Covid-19?</a>
+			  			</div>
+			  		</div>
+
+			  		<div class="devide"></div>
+			  		<div class="box-new">
+			  			<div class="box-img">
+			  				<img src="Images/33.jpg">
+			  			</div>
+			  			<div class="box-content">
+			  				<a href="#"><i class="fas fa-chevron-right"></i>Tướng không quân Mỹ lên án hành vi của Trung Quốc ở biển Đông</a>
+			  			</div>
+			  		</div>
+
+			  	</div>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<footer class="footer">
+		Bản quyên thuộc về &copyBlack Order
+		</footer>	
+	</div>
+	<script src="JS/myScript.js"></script>
 </body>
 </html>
