--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#info"><i class="fab fa-hotjar"></i>
+					<a class="nav-link" href="index23.html"><i class="fab fa-hotjar"></i>
 						Thông tin
 					</a>
 				</li>
