--- a/info.html
+++ b/info.html
@@ -34,7 +34,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#"><i class="fas fa-user-nurse"></i>
+					<a class="nav-link" href="indexx.html"><i class="fas fa-user-nurse"></i>
 						Phòng chống
 					</a>
 				</li>
