--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">
+					<a class="nav-link" href="bd.html">
 						Nguyên tắc phòng chống
 					</a>
 				</li>
@@ -170,7 +170,7 @@
 	<!--Satifitis part-->
 	<div class="statistic" style="background-color: #cdf7f7;">
 		<div class="statistic-container">
-			<div class="statistic-text">Thống kê các ca mắc covid ngày: <div id="timeShow"></div>
+			<div class="statistic-text" style="font-size: 20px">Thống kê các ca mắc covid ngày: <div id="timeShow"></div>
 			<div class="text-statistic">
 				<p>Hôm nay việt Nam ghi nhận thêm 57 ca mắc mới, trong đó, 1 ca cách ly ngay sau khi nhập cảnh tại Tây Ninh và 56 ca ghi nhận trong nước tại:
 				</p>
