--- a/index23.html
+++ b/index23.html
@@ -163,8 +163,8 @@ có chiều rộng dưới 600px */
 <!-- Nội dung -->
   <div class="responsive">
     <div class="gallery">
-      <a href="images/anh1.jpg">
-        <img src="images/anh1.jpg" width="170" height="170">
+      <a href="Images/anh1.jpg">
+        <img src="Images/anh1.jpg" width="170" height="170">
       </a>
       <div class="disc"> <span><a target="_blank" href="https://www.facebook.com/profileofme">Nguyễn Ngọc Ánh:</a></span> Chuyên gia nghiên cứu thị trường Covid-19 </div>
     </div>
@@ -172,8 +172,8 @@ có chiều rộng dưới 600px */
 
   <div class="responsive">
     <div class="gallery">
-      <a href="images/long1.jpg">
-        <img src="images/long1.jpg" width="170" height="170">
+      <a href="Images/long1.jpg">
+        <img src="Images/long1.jpg" width="170" height="170">
       </a>
      <div class="disc"> <span><a target="_blank" href="https://www.facebook.com/profile.php?id=100041602174887">Lê Văn Long:</a></span> Chuyên gia nghiên cứu phương pháp trị liệu Covid-19 </div>
     </div>  
@@ -181,8 +181,8 @@ có chiều rộng dưới 600px */
 
   <div class="responsive">
     <div class="gallery">
-      <a href="images/binh1.jpg">
-        <img src="images/binh1.jpg" width="170" height="170">
+      <a href="Images/binh1.jpg">
+        <img src="Images/binh1.jpg" width="170" height="170">
       </a>
      <div class="disc">  <span><a target="_blank" href="https://www.facebook.com/winter.soldiers.10690">Lê Thái Bình</a></span> Chuyên Gia Đưa ra những số liệu thống kê Covid-19 </div>
     </div>  
@@ -190,8 +190,8 @@ có chiều rộng dưới 600px */
 
   <div class="responsive">
     <div class="gallery">
-      <a href="images/tu1.jpg" >
-      <img src="images/tu1.jpg" width="170" height="170">
+      <a href="Images/tu1.jpg" >
+      <img src="Images/tu1.jpg" width="170" height="170">
       </a>
       <div class="disc"> <span><a target="_blank" href="https://www.facebook.com/profile.php?id=100004985657894">Hoàng Anh Tú:</a></span> Người bảo đảm sự uy tính của nội dung được chia sẻ </div>    </div>
   </div>
