--- a/info.html
+++ b/info.html
@@ -24,7 +24,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#info"><i class="fab fa-hotjar"></i>
+					<a class="nav-link" href="index23.html"><i class="fab fa-hotjar"></i>
 						Thông tin
 					</a>
 				</li>
