--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
 				</div>
 				<div class="quote3">
 					<p>
+						<a href="infoDetail.html"><i class="fas fa-info-circle"></i>Chi tiết hơn</a>
 					</p>
 				</div>
 			</div>
