--- a/index23.html
+++ b/index23.html
@@ -163,8 +163,8 @@ có chiều rộng dưới 600px */
 <!-- Nội dung -->
   <div class="responsive">
     <div class="gallery">
-      <a href="Images/anh1.jpg">
-        <img src="Images/anh1.jpg" width="170" height="170">
+      <a href="Images/anh1.JPG">
+        <img src="Images/anh1.JPG" width="170" height="170">
       </a>
       <div class="disc"> <span><a target="_blank" href="https://www.facebook.com/profileofme">Nguyễn Ngọc Ánh:</a></span> Chuyên gia nghiên cứu thị trường Covid-19 </div>
     </div>
@@ -202,7 +202,7 @@ có chiều rộng dưới 600px */
   <div class="main">
     <h2>GIỚI THIỆU CHUNG VỀ TRANG WEB</h2>
     <h5>ĐÀ NẴNG, 03/06/2021</h5>
-    <div> <img src="images/backgroundcovid.jpg" width="100%" height="400" alt=""> </div>
+    <div> <img src="Images/bg.jpg" width="100%" height="400" alt=""> </div>
    <!--  <p>Form là một phần không thể thiếu trong bất kì loại website nào.</p>
     <p>Ở bài viết này, Quantrimang.com sẽ hướng dẫn bạn cách xây dựng phần 
     giao diện hiển thị của một biểu mẫu cơ bản. Giao diện này có thể được làm 
